--- a/template.yml
+++ b/template.yml
@@ -42,3 +42,9 @@ Resources:
             Empty:
               title: "Empty Schema"
               type: "object"
+  APIDeployment:
+    Type: AWS::ApiGateway::Deployment
+    Properties:
+      RestApiId:
+        Ref: RestAPI
+      StageName: v1
